--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /testingScripts/output/
+/testingScripts/testingDatas/
 /ComputerVision/__pycache__/
 /ComputerVision/faces/
 /ComputerVision/fer-2013
